--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>javafx-graphics</artifactId>
 			<version>13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.11.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
